[metadata]
name = dk2-replay-view
version = 0.1.0
description = A lightweight Door Kickers 2 replay header viewer
author = Joshua Fraustro
author_email = jwfraustro@gmail.com
license = GPL-3.0
license_file = LICENSE
github_project = jwfraustro/dk2-replay-view
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = False
setup_requires =
    setuptools_scm

[flake8]
max-line-length = 120
